// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownList component should renders correctly 1`] = `
<StyledComponent
  activeTitle="Please select list item"
  activeValue="activeClassValue"
  className="sample-class"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-htpNat",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  .dropdownUlBorder {
    border: 1px solid ",
          [Function],
          ";
    background-color: ",
          [Function],
          ";
  }

  .customSelectTitle {
    border: 1px solid #9c9c9c;
    background-color: #eeeeee;
    margin-top: ",
          [Function],
          ";
    padding: ",
          [Function],
          "
    cursor:pointer;
    position: relative;
  }


  .customSelectTitleImg {
    background: url(",
          "/static/images/down_arrow_icon.png",
          ") no-repeat right center;
    position: absolute;
    right: 10px;
    height: 15px;
    width: 100%;
    top: 10px;
  }

  .customSelectTitleUpImg {
    background: url(",
          "/static/images/up_arrow_icon.png",
          ") no-repeat right center;
    position: absolute;
    right: 10px;
    height: 15px;
    width: 100%;
    top: 10px;
  }

  .text-align-center{
    padding: ",
          [Function],
          "
    cursor:pointer;
  }

  .dropDownSelect{
    position: absolute;
    left: 0;
    width: 100%;
    z-index: 9;
    overflow: auto
  }

  .dropdownUpperDiv{
    position: relative;
    text-align:center;
  }


  .dropdownliBottomBorder {
    border-bottom: 1px solid ",
          [Function],
          ";
    padding: ",
          [Function],
          ";
  }

  .dropdownActiveClass {
    background-color: #eeeeee};
    position: relative;
  }

  li:hover {
    background: #eeeeee;
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(Dropdown)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-htpNat",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  options={
    Object {
      "content": <div>
        <p>
          Test 1
        </p>
      </div>,
      "title": "Test 1",
      "value": "1",
    }
  }
  selectListTitle="Select from address book"
/>
`;

exports[`DropdownList component should renders correctly when optional fields are not present 1`] = `
<StyledComponent
  className="sample-class"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-htpNat",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  .dropdownUlBorder {
    border: 1px solid ",
          [Function],
          ";
    background-color: ",
          [Function],
          ";
  }

  .customSelectTitle {
    border: 1px solid #9c9c9c;
    background-color: #eeeeee;
    margin-top: ",
          [Function],
          ";
    padding: ",
          [Function],
          "
    cursor:pointer;
    position: relative;
  }


  .customSelectTitleImg {
    background: url(",
          "/static/images/down_arrow_icon.png",
          ") no-repeat right center;
    position: absolute;
    right: 10px;
    height: 15px;
    width: 100%;
    top: 10px;
  }

  .customSelectTitleUpImg {
    background: url(",
          "/static/images/up_arrow_icon.png",
          ") no-repeat right center;
    position: absolute;
    right: 10px;
    height: 15px;
    width: 100%;
    top: 10px;
  }

  .text-align-center{
    padding: ",
          [Function],
          "
    cursor:pointer;
  }

  .dropDownSelect{
    position: absolute;
    left: 0;
    width: 100%;
    z-index: 9;
    overflow: auto
  }

  .dropdownUpperDiv{
    position: relative;
    text-align:center;
  }


  .dropdownliBottomBorder {
    border-bottom: 1px solid ",
          [Function],
          ";
    padding: ",
          [Function],
          ";
  }

  .dropdownActiveClass {
    background-color: #eeeeee};
    position: relative;
  }

  li:hover {
    background: #eeeeee;
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(Dropdown)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-htpNat",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  options={
    Object {
      "content": <div>
        <p>
          Test 1
        </p>
      </div>,
      "title": "Test 1",
      "value": "1",
    }
  }
/>
`;
